--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf=8"/>
         <title>Yew App</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link data-trunk rel="copy-file" href="yew-logo.svg" />
+        <link data-trunk rel="sass" href="style.scss" />
         <link data-trunk rel="rust"/>
     </head>
 </html>
